# SequenceAligner

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  404.html  CITATION.cff  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  Snakefile  about.html  alignment.html  benchmarks.html  cli.html  fmindex.html  getting-started.html  index.html  input.html  mkdocs.yml  outputs.html  performance.html  plot_matrix.py  processes.html  pyproject.toml  requirements.txt  search.html  seq1.fasta  seq3.fasta  seq_v2.cpp  seq_v3.cpp  sequence_alignment.cpp  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  deploy-doxygen.yml  docs.yml  release.yml
alignment_tool/: README.md  __init__.py  block_detection.py  cli.py  comparison.py  dp_matrix.py  fasta_utils.py  file_inventory.py  lcs_utils.py  main.py  path_utils.py  plotting.py  residue_profiles.py  substitution_analysis.py  summary.py
api/: EBLOSUM62_8h.html  EBLOSUM62_8h_source.html  EDNAFULL_8h.html  EDNAFULL_8h_source.html  annotated.html  annotated_dup.js  classFMIndex.html  classFMIndex.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  fmindex_8cpp.html  fmindex_8cpp.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp.js  main__fmindex_8cpp.html  main__fmindex_8cpp.js  navtreedata.js  navtreeindex0.js  structAffineDPScores.html  structAffineDPScores.js  structAlignmentResult.html  structAlignmentResult.js  structChainedSeed.html  structChainedSeed.js  structLcsSegmentResult.html  structLcsSegmentResult.js  structLoc.html  (+3 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+23 more)
benchmarking/: README.md  valgrind.xml
benchmarking/benchmark/: __init__.py  benchmark.py  utils.py
benchmarking/benchmark/parsers/: __init__.py  blast_parser.py  msa_parser.py  sam_parser.py
benchmarking/benchmark/runners/: __init__.py  blast_runner.py  bowtie2_runner.py  bwa_runner.py  clustal_runner.py  mafft_runner.py
benchmarking/configs/: default.yaml
debug/: postcheck.md
docs/: about.md  alignment.md  benchmarks.md  cli.md  fmindex.md  getting-started.md  index.md  input.md  outputs.md  performance.md  processes.md
docs/api/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals_defs.html  globals_func.html  globals_vars.html  navtreedata.js  navtreeindex0.js
docs/api/html/search/: all_2.js  defines_1.js  functions_0.js  functions_1.js  functions_4.js  searchdata.js  variables_0.js  variables_2.js
doxygen/html/: doxygen_crawl.html  globals.html  index.html  main__v1_8cpp.html  main__v1_8cpp.js
doxygen/html/search/: all_1.js  all_3.js  all_5.js  defines_0.js  defines_2.js  files_0.js  functions_2.js  functions_3.js  variables_1.js
dpview/: README.md
dpview/backend/: data_loader.py  matrix_utils.py  server.py
dpview/frontend/: app.js  index.html  style.css
files/: README.md  dna2.fasta  dna3.fasta  dna4.fasta  prot3.fasta  prot4.fasta  seq2.fasta  test1.fasta  test2.fasta
plotDP/: plotDP.sh  plotting.md
plotter/: bin2zarr.py  directvis.sh  interact.py  plotDP.py  plotDP.sh  vis.R  vis.sh  vis1.py  visualize.py
scripts/: plotter.py
search/: search_index.json
sequence_alignment_platform/: report.md
sequence_alignment_platform/backend/: alignment_runner.py  analysis_parser.py  common.py  main.py  matrix_parser.py  test_ws.py
sequence_alignment_platform/frontend/: package.json
sequence_alignment_platform/frontend/public/: index.html
sequence_alignment_platform/frontend/src/: App.js  index.css
sequence_alignment_platform/frontend/src/components/: AlignmentViewer.jsx  AnalysisDashboard.jsx  DropZone.jsx  MatrixVisualizer.jsx
sequence_alignment_platform/public/: index.html
src/: EBLOSUM62.h  EDNAFULL.h  fm.cpp  fmindex.cpp  main.cpp  main_fmindex.cpp  main_v1.cpp  main_v2.cpp  main_v3.cpp  plotDP.sh  test.cpp
