[project]
name = "sequencealigner"
version = "0.1.0"
description = "SequenceAligner project environment"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "mkdocs-material",
    "pytest",
    "mypy",
    "ruff",
    "mkdocs",
    "mkdocstrings[python]",
    "pystrings",
    "tqdm>=4.67.3",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.11",
]
