[project]
name = "sequencealigner"
version = "0.9.0"
description = "SequenceAligner project environment"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "mkdocs-material",
    "pytest",
    "mypy",
    "ruff",
    "mkdocs",
    "mkdocstrings[python]",
    "pystrings",
    "tqdm>=4.67.3",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.11",
    "biopython>=1.86",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.27",
    "websockets>=16.0",
    "httpx>=0.28.1",
]
